# condor-web

./: Cargo.toml  README.md  flake.nix
src/: index.html  main.rs
templates/: hello.html
